--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Welcome to Lisbon.</h1>
+    <h2>The capital of Portugal🇵🇹</h2>
     <footer>
       This project was coded by
       <a href="https://dricividini.netlify.app/">Adriana Cividini</a> and it is
