Added the header.

--- a/index.html
+++ b/index.html
@@ -3,16 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=>, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Document</title>
   </head>
   <body>
-    <h1>Welcome to Lisbon.</h1>
-    <h2>The capital of Portugal🇵🇹</h2>
-    <footer>
-      This project was coded by
-      <a href="https://dricividini.netlify.app/">Adriana Cividini</a> and it is
-      open sourced on
-      <a href="https://github.com/AdrianaCividini/lisbon-project">GitHub</a>
-    </footer>
+    <div class="container">
+      <header>
+        <h3>Travel</h3>
+        <h1>Welcome to Kyoto</h1>
+        <h2>The beautuful and lovely city in Japan🇯🇵</h2>
+
+        <a href="">learn more</a>
+      </header>
+
+      <footer>
+        This project was coded by
+        <a href="https://dricividini.netlify.app/">Adriana Cividini</a> and it
+        is open sourced on
+        <a href="https://github.com/AdrianaCividini/lisbon-project">GitHub</a>
+      </footer>
+    </div>
   </body>
 </html>
