Creating the section and styling the footer.

--- a/index.html
+++ b/index.html
@@ -15,13 +15,52 @@
 
         <a href="">learn more</a>
       </header>
+    </div>
 
-      <footer>
-        This project was coded by
-        <a href="https://dricividini.netlify.app/">Adriana Cividini</a> and it
-        is open sourced on
-        <a href="https://github.com/AdrianaCividini/lisbon-project">GitHub</a>
-      </footer>
+    <footer>
+      <section class="grid">
+      <div>
+        <h3>More about Kyoto</h3>
+        <ul>
+          <li>
+            <a href="https://www.kansai-airport.or.jp/" target="_blanket"
+              >Kyoto Airport website</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://maps.app.goo.gl/zfotkr2CEkPhjxdC9"
+              target="_blanket"
+              >Map of Kyoto</a
+            >
+          </li>
+          <li>
+            <a href="https://www2.city.kyoto.lg.jp/kotsu/webguide/en/"
+              >Public transport map</a
+            >
+          </li>
+        </ul>
+ </div>
+  <div>
+    <h3>About me</h3>
+        <p>
+          Hi! My name is Adriana and I visit Kyoto on my first trip in Asia. I
+          made this page beacuse really loved Kyoto, such a special and unique
+          city.
+        </p>
+      </div>
+
+      <div>
+        <h3>About this website</h3>
+      <p>I created this page to show others the beauty of Kyoto.
+      This project was coded by
+        <a href="https://dricividini.netlify.app/">Adriana Cividini</a>
+      It is open sourced on
+      <a href="https://github.com/AdrianaCividini/lisbon-project">GitHub.</a>
+      </p>
+      </div>
+    </section>
+    </footer>
     </div>
   </body>
 </html>
