--- a/index.html
+++ b/index.html
@@ -11,12 +11,49 @@
       <header>
         <h3>Travel</h3>
         <h1>Welcome to Kyoto</h1>
-        <h2>The beautuful and lovely city in Japan🇯🇵</h2>
+        <h2>The beautiful and lovely city in Japan🇯🇵</h2>
         <a href="">learn more</a>
       </header>
 
+      <main>
+        <section class="grid grid-2-columns">
+          <div>
+            <img
+              src="../photos/geisha.png"
+              alt="Geisha img"
+              class="img-responsive"
+            />
+          </div>
+          <div>
+            <h2>Why Kyoto?</h2>
+            <h3>Kyoto the city of the Geisha</h3>
+            <p>
+              When you visit Kyoto, you're signing up for a unique experience,
+              one that's a tad bit different from what other travelers often
+              chase. Imagine this: One day, you're walking in a quiet
+              neighborhood, enveloped in the scent of cherry blossoms, and the
+              next, you're joining locals in a lively festival dance. Kyoto is
+              the heart of Japan’s geisha world. In Kyoto, however,
+              fully-fledged geisha are properly called geiko (pronounced
+              “gay-ko”). Young ladies, usually between the ages of 15 and 20,
+              train for five years to become a geiko. During this period, they
+              are known as maiko (pronounced “my-ko”). Knowledgeable insiders
+              estimate that there are about 100 geiko and 100 maiko in Kyoto.
+              Other cities, like Tokyo, have some version of geisha, but they
+              don’t usually undergo the strict training that defines Kyoto’s
+              maiko and geiko. Geisha are highly skilled entertainers who appear
+              at high-end dinners, private parties and special events to add a
+              special touch to the proceedings. They are NOT prostitutes,
+              despite various silly rumors and portrayals in certain books and
+              movies. Rather, they are ladies who have trained for years in the
+              traditional Japanese arts to become the perfect entertainers.
+            </p>
+          </div>
+        </section>
+      </main>
+
       <footer>
-        <section class="grid">
+        <section class="grid grid-3-columns">
           <div>
             <h3>More about Kyoto</h3>
             <ul>
