Added the grid.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=>, initial-scale=1.0" />
+
     <link rel="stylesheet" href="src/style.css" />
     <title>Document</title>
   </head>
@@ -48,6 +49,120 @@
               movies. Rather, they are ladies who have trained for years in the
               traditional Japanese arts to become the perfect entertainers.
             </p>
+          </div>
+        </section>
+
+        <section class="secondary">
+          <h2 class="text-center">Cafes</h2>
+          <h3 class="text-center">My favorite cafés in Kyoto</h3>
+          <div class="grid grid3-columns">
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="../photos/coffee-1.jpeg"
+                  alt="caffee in kyoto"
+                  class="img-responsive"
+                />
+              </div>
+
+              <div class="card-body">
+                <h4>Cafe Vermillion</h4>
+                <p>
+                  It's all about Coffee, Culture & Communication Bilingual
+                  English and Japanese espresso bar and cafe located in Fushimi
+                  Inari, right next to the world-renowned Fushimi Inari Shrine
+                  in Kyoto, Japan. Named after the vivid, iconic color of the
+                  famous torii gates seen around Kyoto and Japan — Vermillion.
+                </p>
+                <h5>Address</h5>
+                <p>5-31 Fukakusa Kaidoguchicho</p>
+                <h5>What I like about it</h5>
+                <p>
+                  Great tasting coffee and barista made. Snacks were light and
+                  just perfect. Nice but small seating area and warm cosy
+                  atmosphere.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://www.vermillioncafe.com/"
+                  target="_blanket"
+                  class="btn"
+                >
+                  Learn more
+                </a>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="../photos/coffee-2.jpeg"
+                  alt="caffee in kyoto"
+                  class="img-responsive"
+                />
+              </div>
+
+              <div class="card-body">
+                <h4>Cafe Kurasu</h4>
+                <p>
+                  The origin of the name Kurasu is derived from the Japanese
+                  word for "living." We started as a small online homeware shop
+                  in 2013, and now operate a physical store and an online shop,
+                  delivering high-quality specialty coffee and tea roasted at
+                  our Nishijin roastery, as well as Japanese coffee equipment
+                  all over the world. doing.
+                </p>
+                <h5>Address</h5>
+                <p>552 Higashiaburanokojicho</p>
+                <h5>What I like about it</h5>
+                <p>
+                  Such a beautiful coffee shop with phenomenal staff and warm
+                  welcome. I had to order a second round because the first was
+                  that amazing. Loved every sip.
+                </p>
+              </div>
+              <a href="https://jp.kurasu.kyoto/" target="_blanket" class="btn">
+                Learn more
+              </a>
+            </div>
+
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="../photos/coffee-3.jpeg"
+                  alt="caffee in kyoto"
+                  class="img-responsive"
+                />
+              </div>
+
+              <div class="card-body">
+                <h4>Inoda coffee</h4>
+                <p>
+                  Inoda Coffee's main store has a townhouse-style exterior that
+                  blends in with the city. Once you step inside the store, you
+                  will feel as if you have traveled back in time. One of the
+                  features is that you can enjoy creating a space with
+                  particular attention to detail. Relax to your heart's content
+                  in the spacious space surrounded by the aroma of coffe.
+                </p>
+                <h5>Address</h5>
+                <p>140 Dosukecho</p>
+                <h5>What I like about it</h5>
+                <p>
+                  Lovely coffee shop with great different flavour. I've tried 2
+                  different kind of coffees and loved it. Also they have a
+                  charming space to seat an relax.
+                </p>
+              </div>
+              <a
+                href="https://www.inoda-coffee.co.jp/shop/honten/"
+                target="_blanket"
+                class="btn"
+              >
+                Learn more
+              </a>
+            </div>
           </div>
         </section>
       </main>
