--- a/index.html
+++ b/index.html
@@ -57,12 +57,20 @@
           <h3 class="text-center">My favorite cafés in Kyoto</h3>
           <div class="grid grid3-columns">
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="../photos/coffee-1.jpeg"
                   alt="caffee in kyoto"
                   class="img-responsive"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3269.5287099559996!2d135.7741523!3d34.96841930000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60010f1593ae5eed%3A0xd0046a592d23ed7!2sVermillion%20Cafe!5e0!3m2!1sen!2smt!4v1712340403568!5m2!1sen!2smt"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
 
               <div class="card-body">
