--- a/index.html
+++ b/index.html
@@ -103,12 +103,20 @@
             </div>
 
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="../photos/coffee-2.jpeg"
                   alt="caffee in kyoto"
                   class="img-responsive"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13072.970019550557!2d135.747691355763!3d35.000634140267856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x600108a87b2b7121%3A0x5f6d1f35309f5711!2sKurasu%20Kyoto%20Stand!5e0!3m2!1sen!2smt!4v1712393842245!5m2!1sen!2smt"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
 
               <div class="card-body">
@@ -119,7 +127,7 @@
                   in 2013, and now operate a physical store and an online shop,
                   delivering high-quality specialty coffee and tea roasted at
                   our Nishijin roastery, as well as Japanese coffee equipment
-                  all over the world. doing.
+                  all over the world.
                 </p>
                 <h5>Address</h5>
                 <p>552 Higashiaburanokojicho</p>
@@ -136,12 +144,20 @@
             </div>
 
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="../photos/coffee-3.jpeg"
                   alt="caffee in kyoto"
                   class="img-responsive"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3267.943941119442!2d135.75832725091016!3d35.008108396782454!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x600108903ca0851d%3A0x5d532e588a324cd4!2sInoda%20Coffee%20-%20Main%20Shop!5e0!3m2!1sen!2smt!4v1712393997712!5m2!1sen!2smt"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
 
               <div class="card-body">
@@ -174,6 +190,43 @@
           </div>
         </section>
       </main>
+
+      <section>
+        <h2>Gallery</h2>
+        <h3>My photos from Kyoto</h3>
+        <div class="grid grid-3-columns">
+          <img
+            src="../photos/kyoto-photos/kyoto-1.jpeg"
+            alt="kyoto-photo"
+            class="img-responsive"
+          />
+          <img
+            src="../photos/kyoto-photos/kyoto-2.avif"
+            alt="kyoto-photo"
+            class="img-responsive"
+          />
+          <img
+            src="../photos/kyoto-photos/kyoto-3.jpeg"
+            alt="kyoto-photo"
+            class="img-responsive"
+          />
+          <img
+            src="../photos/kyoto-photos/kyoto-4.jpeg"
+            alt="kyoto-photo"
+            class="img-responsive"
+          />
+          <img
+            src="../photos/kyoto-photos/kyoto-5.jpeg"
+            alt="kyoto-photo"
+            class="img-responsive"
+          />
+          <img
+            src="../photos/kyoto-photos/kyoto-6.jpeg"
+            alt="kyoto-photo"
+            class="img-responsive"
+          />
+        </div>
+      </section>
 
       <footer>
         <section class="grid grid-3-columns">
